--- a/src/app/web-app/resource/exp/exp-inner/exp-inner.component.scss
+++ b/src/app/web-app/resource/exp/exp-inner/exp-inner.component.scss
@@ -1,1 +1,15 @@
+.col-md-3 {
+  .icon {
+    min-height: 200px;
+    position: relative;
 
+    img {
+      position: absolute;
+      max-width: 100%;
+      max-height: 200px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
