--- a/src/app/web-app/resource/exp/exp-list/exp-list.component.html
+++ b/src/app/web-app/resource/exp/exp-list/exp-list.component.html
@@ -5,8 +5,8 @@
     All Workspaces &#40;{{wrkSpcs.length}}&#41;
   </h3>
   <div class="mt-2 row workspaces">
-    <div class="card-container curs-ptr col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0"
-      [routerLink]="'/web-app/resource/experiences/'+wrkspc.id" *ngFor="let wrkspc of wrkSpcs;">
+    <div class="card-container curs-ptr col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let wrkspc of wrkSpcs;"
+      (click)="changePage(wrkspc.id)">
       <div class="card overflow-hidden">
         <div class="card-body" style="background-image: url(assets/images/bg.jpg);">
           <img src="assets/images/logo.png" class="icon">
